tests/snapshots/cli__prints_valid_fifo.snap
---
source: tests/cli.rs
expression: "str::from_utf8(&out.get_output().stdout)?"

---
1 2 3 4 1 2 5 1 2 3 4 5
Hits: 3 - Misses: 9
+---+---+---+---+---+---+---+---+---+---+---+---+
| 1 | 1 | 1 | 4 | 4 | 4 | 5 | 5 | 5 | 5 | 5 | 5 |
+---+---+---+---+---+---+---+---+---+---+---+---+
|   | 2 | 2 | 2 | 1 | 1 | 1 | 1 | 1 | 3 | 3 | 3 |
+---+---+---+---+---+---+---+---+---+---+---+---+
|   |   | 3 | 3 | 3 | 2 | 2 | 2 | 2 | 2 | 4 | 4 |
+---+---+---+---+---+---+---+---+---+---+---+---+

