tests/snapshots/cli__prints_valid_lru.snap
---
source: tests/cli.rs
expression: "str::from_utf8(&out.get_output().stdout)?"

---
1 2 3 4 1 2 5 1 2 3 4 5
Hits: 2 - Misses: 10
+---+---+---+---+---+---+---+---+---+---+---+---+
| 1 | 1 | 1 | 4 | 4 | 4 | 5 | 5 | 5 | 3 | 3 | 3 |
+---+---+---+---+---+---+---+---+---+---+---+---+
|   | 2 | 2 | 2 | 1 | 1 | 1 | 1 | 1 | 1 | 4 | 4 |
+---+---+---+---+---+---+---+---+---+---+---+---+
|   |   | 3 | 3 | 3 | 2 | 2 | 2 | 2 | 2 | 2 | 5 |
+---+---+---+---+---+---+---+---+---+---+---+---+

